--- a/src/index.css
+++ b/src/index.css
@@ -161,13 +161,14 @@ aside ul {
 }
 
 .products {
+  padding: 30px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .product {
-  padding: 40px;
+  padding: 15px;
   width: 250px;
   align-self: flex-start;
 }
@@ -180,15 +181,20 @@ aside ul {
 .price {
   color: grey;
   font-size: 20px;
+  text-decoration: none;
+
 }
 
 .brand {
   color: grey;
   font-size: 14px;
+  text-decoration: none;
 }
 
 .name {
   font-size: 15px;
+  color: black;
+  text-decoration: none;
 }
 
 .product button {
