--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,8 @@ h1 {
   width: 200px;
   margin: 0;
   font-size: 36px;
+  color: black;
+  text-decoration: none;
 }
 
 .search {
@@ -59,6 +61,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 30px;
+  text-decoration: none;
 }
 
 .left {
