--- a/src/index.css
+++ b/src/index.css
@@ -239,3 +239,24 @@ aside ul {
   background: #b395bf; 
 }
 
+:root {
+  --star-size: 40px;
+  --star-color: #fff;
+  --star-background: rgb(0, 0, 0);
+}
+
+.stars {
+  --percent: calc(var(--rating) / 5.1 * 100%);
+  font-size: var(--star-size);
+  font-family: Times;
+  line-height: 1;
+  -webkit-text-stroke: 1px #000;
+}
+
+.stars::before {
+  content: '★★★★★';
+  letter-spacing: 3px;
+  background: linear-gradient(90deg, var(--star-background) var(--percent), var(--star-color) var(--percent));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
