--- a/src/cart.css
+++ b/src/cart.css
@@ -46,6 +46,8 @@ h1 {
   font-size: 20px;
   padding: 5px;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .orderValue {
@@ -86,4 +88,11 @@ h1 {
 
 .delete {
   cursor: pointer;
+}
+
+.input {
+  display: block;
+  padding: 5px;
+  margin: 5px;
+  border: solid black 1px;
 }
