--- a/src/cart.css
+++ b/src/cart.css
@@ -40,8 +40,7 @@ h1 {
 }
 
 .prices {
-  width: 400px;
-  height: 400px;
+  width: 500px;
   background-color: #cfc0ff ;
   font-size: 20px;
   padding: 5px;
@@ -90,9 +89,38 @@ h1 {
   cursor: pointer;
 }
 
-.input {
-  display: block;
-  padding: 5px;
-  margin: 5px;
-  border: solid black 1px;
+.checkout-form {
+  display: flex;
+  flex-direction: column;
+}
+
+input[type=text] {
+  margin-bottom: 20px;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+input[type=submit] {
+  margin-top: 20px;
+  padding: 12px;
+  border: 1px solid #000;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 16px;
+  color: white;
+  background-color: black;
+  border-radius: 3px;
+}
+
+
+label {
+  font-size: 16px;
+}
+
+.orders img {
+  width: 100px;
+}
+
+.orders .item p{
+  font-size: 10px;
 }
